# email-nl

./: Cargo.toml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: lib.rs  main.rs  startup.rs
src/routes/: health_check.rs
tests/: health_check.rs
